--- a/src/main/resources/com/example/t03_tannenbaum/hello-view.fxml
+++ b/src/main/resources/com/example/t03_tannenbaum/hello-view.fxml
@@ -12,9 +12,9 @@
       <Label layoutX="41.0" layoutY="80.0" text="Stammhöhe" />
       <Label layoutX="41.0" layoutY="116.0" text="Kronenhöhe" />
       <TextField fx:id="Stammbreite" layoutX="118.0" layoutY="39.0" prefHeight="25.0" prefWidth="92.0" />
-      <TextField fx:id="Stammhöhe" layoutX="118.0" layoutY="75.0" prefHeight="25.0" prefWidth="92.0" />
-      <TextField fx:id="Kronenhöhe" layoutX="118.0" layoutY="111.0" prefHeight="25.0" prefWidth="92.0" />
-      <Button fx:id="buttonMath" layoutX="234.0" layoutY="112.0" mnemonicParsing="false" text="Tanne zeichnen" />
-      <TextArea fx:id="areaZeichung" layoutX="32.0" layoutY="164.0" prefHeight="337.0" prefWidth="330.0" />
+      <TextField fx:id="Stammhoehe" layoutX="118.0" layoutY="75.0" prefHeight="25.0" prefWidth="92.0" />
+      <TextField fx:id="Kronenhoehe" layoutX="118.0" layoutY="111.0" prefHeight="25.0" prefWidth="92.0" />
+      <Button layoutX="234.0" layoutY="112.0" mnemonicParsing="false" onAction="#buttonMath" text="Tanne zeichnen" />
+      <TextArea fx:id="areaZeichnung" layoutX="32.0" layoutY="164.0" prefHeight="337.0" prefWidth="330.0" />
    </children>
 </AnchorPane>
